<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nameET_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/phoneET_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="@dimen/minWidthET"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defMargin"
        android:text="@string/saveBTN_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <Button
        android:id="@+id/delBTN"
        android:layout_width="@dimen/minWidthET"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defMargin"
        android:text="@string/delBTN_text"
        app:layout_constraintStart_toEndOf="@+id/saveBTN"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <TextView
        android:id="@+id/contactsTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/defMargin"
        android:hint="@string/toolbarTitle"
        android:lineSpacingExtra="8sp"
        android:padding="@dimen/defPadding"
        android:scrollbars="vertical"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBTN" />

</androidx.constraintlayout.widget.ConstraintLayout>