<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/defMargin"
    android:background="@color/item_background"
    android:padding="@dimen/defPadding">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nameET_hint"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phoneET_hint"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timeTV_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>